Fix header link list padding for proper spacing

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -62,6 +62,8 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 12px;
+  padding: 0px;
+  margin-left: 16px;
   
   
 }
